Eliminate lang.js (old i18n approach). Load common.properties in util_overlay.xul so it is available globally.

--- a/Open-ILS/xul/staff_client/server/locale/en-US/common.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/common.properties
@@ -11,3 +11,54 @@ common.barcode.status.warning.barred=Barred
 common.barcode.status.warning.blocked=Blocked
 common.barcode.status.warning.unknown=with an unknown code: %1$s
 common.date.invalid=Invalid Date
+lang.version=remote v1
+staff.acp_label_barcode=Barcode
+staff.acp_label_call_number=Call Number
+staff.acp_label_circ_as_type=Circ As Type
+staff.acp_label_circ_lib=Circ Lib
+staff.acp_label_circ_modifier=Circ Modifier
+staff.acp_label_copy_number=Copy Number
+staff.acp_label_deposit_amount=Deposit Amount
+staff.acp_label_fine_level=Fine Level
+staff.acp_label_id=Copy ID
+staff.acp_label_loan_duration=Loan Duration
+staff.acp_label_location=Location
+staff.acp_label_price=Price
+staff.acp_label_status=Status
+staff.ahr_current_copy_label=Current Copy
+staff.ahr_email_notify_label=Email Notify
+staff.ahr_expire_time_label=Expire Time
+staff.ahr_fulfillment_time_label=Fulfillment Time
+staff.ahr_hold_type_label=Type
+staff.ahr_holdable_formats_label=Holdable Formats
+staff.ahr_id_label=Hold Id
+staff.ahr_phone_notify_label=Phone Notify
+staff.ahr_pickup_lib_label=Pickup Lib
+staff.ahr_prev_check_time_label=Prev Check Time
+staff.ahr_requestor_label=Requestor
+staff.ahr_selection_depth_label=Selection Depth
+staff.ahr_status_label=Status
+staff.ahr_target_label=Target
+staff.ahr_usr_label=Usr
+staff.circ_label_due_date=Due Date
+staff.circ_label_id=Circ Id
+staff.circ_label_renewal_remaining=Remaining Renewals
+staff.mvr_label_author=Author
+staff.mvr_label_doc_id=Doc Id
+staff.mvr_label_title=Title
+staff.bills_xact_dates_label=Record / Dates
+staff.bills_information=Information
+staff.bills_current_payment_label=Current Payment
+staff.mbts_id_label=Bill # 
+staff.mbts_xact_start_label=Start
+staff.mbts_xact_finish_label=Finish
+staff.mbts_total_owed_label=Total Billed
+staff.mbts_total_paid_label=Total Paid
+staff.mbts_balance_owed_label=Balance Owed
+staff.au_label_active=Active
+staff.au_label_id=Record ID
+staff.au_label_prefix=Prefix
+staff.au_label_family_name=Family Name
+staff.au_label_first_given_name=First Name
+staff.au_label_second_given_name=Middle Name
+staff.au_label_suffix=Suffix
