--- a/Open-ILS/xul/staff_client/server/locale/en-US/circ.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/circ.properties
@@ -1,3 +1,4 @@
+staff.circ.alert=Alert
 staff.circ.item_no_circs=Item %1$s has never circulated.
 staff.circ.invalid_date=Invalid Date
 staff.circ.future_date=Future Date
@@ -5,11 +6,12 @@ staff.circ.process_item=Check In / Process Item
 staff.circ.backdated_checkin=Backdated %1$s Check In
 staff.circ.backdate.exception=Problem setting backdate: %1$s
 staff.circ.unimplemented=Not Yet Implemented
-staff.circ.check_digit.bad=Bad check digit; possible mis-scan.  Use this barcode ("%1$s") anyway?
+staff.circ.check_digit.bad=Bad check digit, possibly due to a bad scan.  Use this barcode ("%1$s") anyway?
 staff.circ.barcode.bad=Bad Barcode
 staff.circ.cancel=Cancel
 staff.circ.barcode.accept=Accept Barcode
 staff.circ.confirm=Check here to confirm this action
+staff.circ.confirm.msg=Check here to confirm this message.
 # If we know the name of the object, we could parameterize that as well
 staff.circ.checkin.exception=Something went wrong in circ.util.checkin: %1$s
 staff.circ.checkin2.exception=Something went wrong in circ.util.checkin2: %1$s
@@ -19,3 +21,42 @@ staff.circ.checkin.exception.no_external=circ.checkin: Calling external .on_chec
 staff.circ.checkin2.exception.checkin2: circ.util.checkin2: No external .on_failure()
 staff.circ.util.checkin.exception.external=circ.util.checkin: Calling external .on_checkin()
 staff.circ.util.checkin.exception.no_external=circ.util.checkin: Calling external .on_checkin()
+staff.circ.checkout.sorting.exception=error in sorting non-cataloged items: %1$s
+staff.circ.checkout.date.exception=Use this format: YYYY-MM-DD
+staff.circ.checkout.unimplemented=Not Yet Implemented
+staff.circ.checkout.cmd_checkout_submit.msg=Enter the number of %1$s circulating:
+staff.circ.checkout.cmd_checkout_submit.title=Non-cataloged Items
+staff.circ.checkout.cmd_checkout_submit.too_many.msg=You tried to circulate %1$d %2$s.  The maximum is 99 per action.
+staff.circ.checkout.cmd_checkout_submit.too_many.title=Non-cataloged Circulation
+staff.circ.checkout.ok.btn=OK
+staff.circ.checkout.cmd_checkout_submit.confirm.msg=Are you sure you want to circulate %1$d %2$s?
+staff.circ.checkout.cmd_checkout_submit.confirm.title=Non-cataloged Circulation
+staff.circ.checkout.yes.btn=Yes
+staff.circ.checkout.no.btn=No
+staff.circ.checkout.cmd_checkout_submit.non_numeric.msg=Error with non-cataloged checkout.  %1$s is not a valid number.
+staff.circ.checkout.cmd_checkout_submit.non_numeric.title=Non-cataloged Circulation
+staff.circ.checkout.disable.error=Error determining whether to disable checkout.
+staff.circ.checkout.date.too_early.error=Due date needs to be after today.
+staff.circ.checkout.barcode.failed= %1$s failed.
+staff.circ.checkout.non_cataloged.pending=Non-cataloged checkout pending...
+staff.circ.checkout.barcode.pending=%1$s checkout pending...
+staff.circ.checkout.barcode.failed.alert=Check Out Failed %1$s
+staff.circ.checkout.override.confirm=Override Checkout Failure?
+staff.circ.checkout.not_cataloged.confirm=Mis-scan or non-cataloged item.  Checkout as a non-cataloged item?
+staff.circ.non_cataloged=Non-cataloged
+staff.circ.checkout.cancelled=Checkout cancelled
+staff.circ.checkout.card.inactive=The card used to retrieve this account is inactive and may not be used to circulate items.
+staff.circ.checkout.barcode.check_out_failed=Check Out Failed
+staff.circ.checkout.account.inactive=This account is inactive and may not circulate items.
+staff.circ.checkout.account.expired=This account has expired and may not circulate items.
+staff.circ.checkout.item_due=This item was due on %1$s.
+staff.circ.checkout.normal_checkin_then_checkout=Normal Checkin then Checkout
+staff.circ.checkout.forgiving_checkin_then_checkout=Forgiving Checkin then Checkout
+staff.circ.checkout.abort_transit_then_checkout=Abort Transit then Checkout
+staff.circ.checkout.network_failure=There was a network failure.
+staff.circ.checkout.copy_status=Copy status = %1$s
+staff.circ.checkout.alert_message=Alert Message = %1$s
+staff.circ.checkout.permission_denied=Permission Denied = %1$s
+# "Circulation" - check &staff.main.menu.circ.label; in lang.dtd
+# "Offline Interface" - check &staff.main.menu.circ.offline.label; in lang.dtd
+staff.circ.checkout.suggest_offline=Check Out Failed.  If you wish to use the offline interface, in the top menubar select Circulation -> Offline Interface
