Convert z39.50 client over to common.properties strings from lang.js

--- a/Open-ILS/xul/staff_client/server/locale/en-US/common.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/common.properties
@@ -62,3 +62,24 @@ staff.au_label_family_name=Family Name
 staff.au_label_first_given_name=First Name
 staff.au_label_second_given_name=Middle Name
 staff.au_label_suffix=Suffix
+staff.z39_50.search_class.author=Author
+staff.z39_50.search_class.isbn=ISBN
+staff.z39_50.search_class.issn=ISSN
+staff.z39_50.search_class.item_type=Item Type
+staff.z39_50.search_class.item_type.all=All Formats
+staff.z39_50.search_class.item_type.art=Papers/Articles
+staff.z39_50.search_class.item_type.bks=Books
+staff.z39_50.search_class.item_type.com=Computer files
+staff.z39_50.search_class.item_type.map=Maps
+staff.z39_50.search_class.item_type.mix=Mixed material
+staff.z39_50.search_class.item_type.rec=Sound recordings
+staff.z39_50.search_class.item_type.sco=Musical scores
+staff.z39_50.search_class.item_type.ser=Serials
+staff.z39_50.search_class.item_type.url=Internet Resources
+staff.z39_50.search_class.item_type.vis=Visual materials
+staff.z39_50.search_class.lccn=LCCN
+staff.z39_50.search_class.pubdate=PubDate
+staff.z39_50.search_class.publisher=Publisher
+staff.z39_50.search_class.tcn=Accession #
+staff.z39_50.search_class.title=Title
+staff.z39_50_import_interface_label=Z39.50 IMPORT
