--- a/Open-ILS/xul/staff_client/server/locale/en-US/circ.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/circ.properties
@@ -63,3 +63,14 @@ staff.circ.checkout.suggest_offline=Check Out Failed.  If you wish to use the of
 staff.circ.circ_brief.staff_out_id=Check Out Staff ID = %1$s
 staff.circ.circ_brief.staff_in_id=Check In Staff ID = %1$s
 staff.circ.circ_brief.failure=Failure rendering circulation.
+staff.circ.copy_details.hold=Hold ID = %1$s
+staff.circ.copy_details.transit=Transit ID = %1$s
+staff.circ.copy_details.circ=Circulation ID = %1$s
+staff.circ.copy_details.last_circ=Last Circulation
+staff.circ.copy_details.current_circ=Current Circulation
+staff.circ.copy_details.no_circ=This item has yet to circulate.
+staff.circ.copy_details.not_transit=This item is not in transit.
+# Displays user info: "Family name, First name : Barcode"
+staff.circ.copy_details.user_details=%1$s, %2$s : %3$s
+staff.circ.copy_details.bad_hold_status=This item is not captured for a hold, however its status is incorrectly set to "On Holds Shelf".  Please check this item in to correct the status.
+staff.circ.copy_details.no_hold=This item is not captured for a hold.
