Complete i18n of chrome/cat/opac.js

--- a/Open-ILS/xul/staff_client/chrome/locale/en-US/offline.properties
+++ b/Open-ILS/xul/staff_client/chrome/locale/en-US/offline.properties
@@ -12,6 +12,14 @@ common.barcode.status.warning.blocked=Blocked
 common.barcode.status.warning.unknown=with an unknown code: %1$s
 common.date.invalid=Invalid Date
 cat.bib_record=Bib Record: %1$s
+cat.opac.delete_record.confirm=Are you sure you want to delete title record #%1$s from the catalog?
+cat.opac.delete_record=Delete Record
+cat.opac.delete=Delete
+cat.opac.cancel=Cancel
+cat.opac.record_deleted=Record deleted.
+cat.opac.record_deleted.confirm=Check here to confirm this action.
+# variables: document ID, error code, error description
+cat.opac.record_delete.error=Error deleting record #%1$s : %2$s : %3$s
 cat.save_record=Save Record
 cat.save.success=Record successfully saved.
 cat.save.failure=Record not likely updated.
