Bring i18n to JSAN error messages

--- a/Open-ILS/xul/staff_client/chrome/locale/en-US/offline.properties
+++ b/Open-ILS/xul/staff_client/chrome/locale/en-US/offline.properties
@@ -68,3 +68,5 @@ circ.offline_register.missing.profile.list=Missing profile list.
 circ.offline_register.missing.id.type.list=Missing identification type list.
 circ.offline_register.missing.required.surveys=Missing required surveys.
 circ.offline_register.missing.files.error=ERROR: Offline patron registration requires some server-generated files.  Please login periodically to retrieve these files.
+jsan.file_not_found.error=File not found: %1$s
+jsan.namespace.creation.error=Could not create namespace[%1$s]: %2$s
