--- a/Open-ILS/xul/staff_client/chrome/locale/en-US/offline.properties
+++ b/Open-ILS/xul/staff_client/chrome/locale/en-US/offline.properties
@@ -11,6 +11,7 @@ common.barcode.status.warning.barred=Barred
 common.barcode.status.warning.blocked=Blocked
 common.barcode.status.warning.unknown=with an unknown code: %1$s
 common.date.invalid=Invalid Date
+common.unimplemented=Not Yet Implemented
 cat.bib_record=Bib Record: %1$s
 cat.opac.delete_record.confirm=Are you sure you want to delete title record #%1$s from the catalog?
 cat.opac.delete_record=Delete Record
@@ -70,3 +71,53 @@ circ.offline_register.missing.required.surveys=Missing required surveys.
 circ.offline_register.missing.files.error=ERROR: Offline patron registration requires some server-generated files.  Please login periodically to retrieve these files.
 jsan.file_not_found.error=File not found: %1$s
 jsan.namespace.creation.error=Could not create namespace[%1$s]: %2$s
+menu.cmd_edit_copy_buckets.tab=Copy Buckets
+menu.cmd_edit_volume_buckets.tab=Volume Buckets
+menu.cmd_edit_record_buckets.tab=Record Buckets
+menu.cmd_edit_user_buckets.tab=User Buckets
+menu.cmd_replace_barcode.prompt=Enter original barcode for the item:
+menu.cmd_replace_barcode.label=Replace Barcode
+menu.cmd_replace_barcode.retrieval.error=We were unable to retrieve an item with barcode "%1$s".
+menu.cmd_replace_barcode.replacement.prompt=Enter the replacement barcode for the item:
+menu.cmd_replace_barcode.replacement.label=Replace Barcode
+menu.cmd_replace_barcode.blank.error=Rename aborted.  Blank for barcode not allowed.
+menu.cmd_replace_barcode.duplicate.error=Rename aborted.  Another copy has barcode "%1$s".
+menu.cmd_replace_barcode.testing.error=Error testing replacement barcode "%1$s".
+menu.cmd_replace_barcode.permission.error=Rename aborted.  Insufficient permission.
+menu.cmd_replace_barcode.renaming.error=Error renaming item.
+menu.cmd_replace_barcode.renaming.failure=The rename operation probably failed.
+menu.cmd_search_opac.tab=Catalog
+menu.cmd_search_tcn.tab=What is the TCN or accession ID for the record?
+menu.cmd_search_tcn.prompt=TCN Lookup
+menu.cmd_search_tcn.not_found.error="%1$s" not found
+menu.cmd_search_tcn.deleted.error="%1$s" is deleted.  Show the deleted record anyway?
+menu.cmd_patron_register.related.tab=Editing Related Patron
+menu.cmd_patron_register.tab=Register Patron
+menu.cmd_browse_holds.tab=Hold Browser
+menu.cmd_browse_holds_shelf.tab=Holds Shelf
+menu.cmd_browse_hold_pull_list.tab=On Shelf Pull List
+menu.cmd_local_admin.tab=Local Administration
+menu.cmd_retrieve_last_patron.session.error=No patron visited yet this session.
+menu.cmd_retrieve_last_record.session.error=No record visited yet this session.
+menu.cmd_retrieve_last_record.status=Retrieving title...
+menu.cmd_chg_session.label=Change Login
+menu.cmd_chg_session.operator.label=Change Operator: %1$s
+menu.cmd_manage_offline_xacts.tab=Offline Transactions
+menu.cmd_download_patrons.complete.status=Download completed
+menu.cmd_download_patrons.error=There was a problem with the download.  The server returned a status %1$s : %2$s
+menu.cmd_stat_cat_edit.tab=Statistical Category Editor
+menu.cmd_non_cat_type_edit.tab=Non-Cataloged Type Editor
+menu.cmd_copy_location_edit.tab=Copy Location Editor
+menu.cmd_console.tab=JavaScript Console
+menu.cmd_shell.tab=JavaScript Shell
+menu.cmd_xuleditor.tab=XUL Editor
+menu.cmd_fieldmapper.tab=Fieldmapper
+menu.cmd_public_opac.tab=OPAC
+menu.cmd_extension_manager.tab=Extension Manager
+menu.cmd_theme_manager.tab=Theme Manager
+menu.cmd_shutdown.prompt=Exit Evergreen completely?
+menu.spawn_search.msg=Editor would like to search for: %1$s
+menu.close_all_tabs.error=Error closing all tabs
+menu.close_tab.update_tab_label=Tab %1$s
+menu.new_tab.tab=Tab %1$s
+menu.set_tab.error=pause for error
